--- a/app/assets/stylesheets/api/photos.scss
+++ b/app/assets/stylesheets/api/photos.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Api::Photos controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.main-page-photos {
+  max-width: 500px;
+  max-height: 500px;
+  margin: 4%;
+}
+
+.main-page-photo-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
