--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,5 +1,8 @@
 .navbar {
-  display: fixed;
+  position: fixed;
+  width: 100%;
+  background-color: white;
+  opacity: .8;
 }
 
 header {
@@ -18,6 +21,11 @@ header {
   align-items: center;
   height: 80px;
   width: 80px;
+}
+
+.logo-and-pic-container {
+  display: flex;
+  align-items: center;
 }
 
 .welcome-user {
