Add username to photos

--- a/app/assets/stylesheets/api/photos.scss
+++ b/app/assets/stylesheets/api/photos.scss
@@ -32,6 +32,8 @@
 .photo-detail-container {
   display: flex;
   justify-content: center;
+  padding-bottom: 200px;
+  padding-top: 20px;
 }
 
 .photo-detail-user-information {
