--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,11 @@
 input {
   margin: 2px;
 }
+
+.homepage-photo-user:hover {
+  text-decoration: underline;
+}
+
+.only-fade-gray:hover {
+  color: gray;
+}
