--- a/app/assets/stylesheets/user_page.scss
+++ b/app/assets/stylesheets/user_page.scss
@@ -1,24 +1,86 @@
-// Place all the styles related to the users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+// // Place all the styles related to the users controller here.
+// // They will automatically be included in application.css.
+// // You can use Sass (SCSS) here: http://sass-lang.com/
+
 .user-page-photos {
-  width: 25%;
+  width: 100%;
+  height: auto;
   margin: 5px;
 }
 
-.user-page-image-container {
+.relative_pos:hover > .user-page-title-username {
   display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
 }
+
+.relative_pos > .user-page-title-username {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  margin-top: 0vw;
+  margin-left: 0vw;
+  color: white;
+  font-size: 22px;
+  width: auto;
+  // padding: 14px;
+  // padding-top: 23%;
+  // background-color: black;
+  // background: linear-gradient(to bottom right, black, white);
+  //
+  // opacity: 1;
+  // background-color:  transparentize(black, .6);
+  background: linear-gradient(to bottom, rgba(255,0,0,0), black);
+  transition: all 10s;
+}
+
+.user-page-image {
+  width: 100%;
+  height: 100%;
+}
+
+.relative_pos {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
 
 .user-page-container {
   padding-top: 150px;
+  padding-bottom: 100px;
 }
 
 .user-page-user-information {
   display: flex;
   justify-content: center;
   font-size: -webkit-xxx-large;
-  margin-bottom: 10px;
+  margin-bottom: 35px;
+}
+
+.masonry-user-page {
+  width: 100%;
+  height: 100%;
+  margin: 1%;
+}
+
+.user-page-title-username a {
+  text-align: center;
+}
+
+@media all and (min-width: 900px) {
+
+  .masonry-user-page {
+    display: flex;
+    justify-content: center;
+  }
+
+  .user-page-photos {
+    width: 32%;
+    height: auto;
+    margin: 3px;
+  }
 }
