--- a/app/assets/stylesheets/create_photo_form.scss
+++ b/app/assets/stylesheets/create_photo_form.scss
@@ -10,6 +10,7 @@
 .gray-fade {
   width: 100%;
   height: 100%;
+  text-align: center;
 }
 
 .gray-fade:hover {
@@ -24,6 +25,10 @@
 }
 
 .thumbnail-image {
+  background-image: url(http://res.cloudinary.com/iso100app/image/upload/v1500862281/black_camera_q12rnt.png);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
   border: 1px solid gray;
   border-radius: 10px;
   margin-bottom: 5px;
