--- a/app/assets/stylesheets/home_page.scss
+++ b/app/assets/stylesheets/home_page.scss
@@ -5,3 +5,12 @@
   background-color: white;
   border-radius: 5px;
 }
+
+.masonry-home-page {
+  margin: 0 auto;
+}
+
+.main-page-photo-container-div {
+  padding: 100px;
+  background-color: rgb(243,245,246);
+}
