--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,10 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arimo|Abel|Cairo|Lato|PT+Sans|Roboto|Roboto+Condensed" rel="stylesheet">
     <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
     <script type="text/javascript">
       window.CLOUDINARY_OPTIONS = {
