Work on backend comments

--- a/app/assets/stylesheets/api/photos.scss
+++ b/app/assets/stylesheets/api/photos.scss
@@ -64,6 +64,13 @@
   font-weight: 700;
 }
 
+.back-button {
+  position: absolute;
+  margin: 2%;
+  margin-left: 41%;
+  display: flex;
+}
+
 .add-album-form {
   display: flex;
   flex-direction: column;
