work on search bar

--- a/app/assets/stylesheets/api/photos.scss
+++ b/app/assets/stylesheets/api/photos.scss
@@ -105,7 +105,7 @@
   font-size: 20px;
 }
 
-.photo-detail-comments, .photo-detail-user-information {
+.photo-detail-tags, .photo-detail-user-information {
   border: 1px solid black;
   width: 450px;
   height: auto;
