--- a/app/assets/stylesheets/user_page.scss
+++ b/app/assets/stylesheets/user_page.scss
@@ -8,13 +8,13 @@
   margin: 5px;
 }
 
-// .relative_pos:hover > .user-page-title-username {
-//   display: flex;
-//   top: 0px;
-//   right: 0px;
-//   bottom: 0px;
-//   left: 0px;
-// }
+.relative_pos:hover > .user-page-title-username {
+  display: flex;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+}
 
 .relative_pos > .user-page-title-username {
   display: none;
