--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -26,6 +26,8 @@
   border: 1px solid black;
   padding-top: 20px;
   padding-bottom: 20px;
+  width: 100%;
+  display: block;
 }
 
 .comment-input-form {
