--- a/app/assets/stylesheets/api/albums.scss
+++ b/app/assets/stylesheets/api/albums.scss
@@ -9,6 +9,7 @@
 }
 
 .add-new-album {
+  font-size: 30px;
   position: relative;
   width: 279px;
   height: 279px;
@@ -41,6 +42,14 @@
 
 .album-title-absolute {
   position: absolute;
+  margin-top: 92px;
+  color: white;
+  text-align: center;
+  background: linear-gradient(to bottom, rgba(255,0,0,0), black);
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
 }
 
 .choosenAlbum-title {
