--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -6,6 +6,10 @@ input {
   text-decoration: underline;
 }
 
+.only-fade-gray {
+  text-decoration: underline;
+}
+
 .only-fade-gray:hover {
   color: gray;
 }
