--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,4 +22,5 @@
 @import "footer.scss";
 @import "user_page.scss";
 @import "api/comments.scss";
-@import "api/tags.scss"
+@import "api/tags.scss";
+@import "spinner.scss";
