--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -74,3 +74,9 @@ h1 {
   justify-content: center;
   align-items: center;
 }
+
+.upload-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
