--- a/app/assets/stylesheets/splash_page.scss
+++ b/app/assets/stylesheets/splash_page.scss
@@ -14,9 +14,20 @@
 }
 
 .fullscreen-bg img {
-  position: absolute;
+  // position: absolute;
   opacity: .8;
   z-index: -100;
+  min-height: 100%;
+  min-width: 1024px;
+
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 // .fullscreen-bg__video {
 //     position: absolute;
