--- a/app/assets/stylesheets/api/photos.scss
+++ b/app/assets/stylesheets/api/photos.scss
@@ -7,11 +7,13 @@
   max-height: 500px;
   margin: 4%;
   transition: all .5s;
+  margin-left: 10%;
+  background-color: rgb(243,245,246);
 }
 
 .main-page-photos:hover {
   -webkit-box-shadow: 8px 8px 30px lightgray;
-  margin: 3%;
+  margin-top: 3.9%;
 }
 
 
