Fix hover button and close modal

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -58,7 +58,7 @@ header {
 }
 
 .login-button:hover, .signup-button:hover {
-  box-shadow: 2px 2px 7px black;
+  background-color: lightgreen;
 }
 
 .iso100:hover {
